@@ -1,0 +1,6 @@
+'R 3' -> 'R 3'
+' R 3' -> 'R 3'
+' R 3 ' -> 'R 3'
+' R  3 ' -> 'R 3'
+'R 3  ' -> 'R 3'
+'__R__3 __ ' -> 'R 3'
