@@ -1,5 +1,9 @@
 cod-tools (unreleased)
 
+  * Changed:
+    - COD::CIF::Data:
+        - updated the lookup_space_group() subroutine to also strip leading
+          and trailing whitespace symbols when constructing lookup keys. 
   * Fixed:
     - COD::CIF::Data:
         - updated the get_space_group_number() subroutine to ignore
